--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
                     </div>
                     <div>
                         <label for="check-in">Check-in</label>
-                        <input type="date" name="check-in" id="check-in" required>
+                        <input type="date" name="check-in" id="check-in"  placeholder="dd/mm/aaaa" pattern="\d{2}/\d{2}/\d{4}" maxlength="10" required>
                     </div>
                     <div>
                         <label for="check-out">Check-out</label>
-                        <input type="date" name="check-out" id="check-out" required>
+                        <input type="date" name="check-out" id="check-out"  placeholder="dd/mm/aaaa" pattern="\d{2}/\d{2}/\d{4}" maxlength="10" required>
                     </div>
                     <div>
                         <input type="submit" value="Pesquisar">
