--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
                     <div>
                         <label for="people">Número de pessoas</label>
-                        <select name="people" id="amount">
+                        <select id="people" name="people" id="amount">
                             <option value="1" selected>1</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
@@ -65,19 +65,7 @@
                     </div>
                 </div>
             </form>
-            <div>
-                <?php
 
-                    echo $_POST['people'];
-                    echo '<br>';
-                    echo $_POST['check-in'];
-                    echo '<br>';
-                    echo $_POST['check-out'];
-
-
-
-                ?>
-            </div>
         </section>
         <section class="about" id="sobre">
             <div class="about-item">
@@ -204,11 +192,11 @@
         <div class="footer-item">
             <h3>Follow us</h3>
             <ul class="social-media">
-                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-threads"></i></a></li>
+                <li><a title="instagram" href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                <li><a title="facebook" href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                <li><a title="x" href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
+                <li><a title="linkedin" href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                <li><a title="threads" href="#"><i class="fa-brands fa-threads"></i></a></li>
             </ul>
             <!--
             <a href="#" class="newsletter-signup">Sign up for our newsletter</a>  Added newsletter signup 
