footer logo css fixed

--- a/index.html
+++ b/index.html
@@ -125,7 +125,9 @@
         
         <section class="location" id="localizacao">
             <div class="location-text">
-                <h2><i class="fas fa-map-location-dot "></i> Localização Privilegiada</h2>
+                <div>
+                    <h2><i class="fas fa-map-location-dot "></i> Localização Privilegiada</h2>
+                </div>
                 <p>Situado em uma localização privilegiada, o Hotel Paraíso das Águas está próximo das principais atrações turísticas, centros de compras e áreas de negócios da cidade, proporcionando facilidade de acesso para todos os hóspedes.</p>     
             </div>
             <div class="map">
@@ -172,9 +174,8 @@
     <footer>
         <div class="footer-item">
             <div class="footer-logo">
-                <h2>Hotel Paraíso das Águas</h2>
                 <img src="src/imagens/logo_favicon_no_bg_circled.png" alt="" width="200">
-                <p class="tagline"></p> <!-- Added tagline -->
+                <h2>Hotel Paraíso das Águas</h2>
             </div>
 
         </div>
