Location desktop layout fixed footer adjusted

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
         </section>
         <section id="reserve">
-            <form class="rooms" method="post">
+            <form class="rooms">
                 <div class="reserve-title-div">
                     <h2>Quartos & Taxas <i class="fas fa-check-circle"></i></h2>
                 </div>
@@ -201,11 +201,8 @@
                 <li><a title="linkedin" href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
                 <li><a title="threads" href="#"><i class="fa-brands fa-threads"></i></a></li>
             </ul>
-            <!--
-            <a href="#" class="newsletter-signup">Sign up for our newsletter</a>  Added newsletter signup 
-            <a href="#" class="special-offers">Check out our special offers!</a>  Added special offers link -->
         </div>
-        <small>&copy; Todos os direitos reservados <br> Desenvolvido por <a href="https://github.com/JuanCorreadeSaRibas" target="_blank" rel="noopener author">  Juan Correa de Sá Ribas</a> <i class="fa-brands fa-github"></i> </small>
+        <small>&copy; Todos os direitos reservados</small>
     </footer>
     
     <script defer src="src/js/script.js"></script>
