Changing localtion layout created fonts.css to store fonts obvious
fixed footer fr

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Hotel Paraíso das Águas</title>
     <link rel="shortcut icon" href="src/imagens/logo_favicon_no_bg_circled.png" type="image/x-icon">
     <link rel="stylesheet" href="src/css/style.css">
-    <link rel="stylesheet" href="src/css/mobile.css" media="(max-width: 767px)">
+    <link rel="stylesheet" href="src/css/mobile.css" media="(max-width: 768px)">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
@@ -172,36 +172,37 @@
     </main>
     
     <footer>
-        <div class="footer-item">
-            <div class="footer-logo">
-                <img src="src/imagens/logo_favicon_no_bg_circled.png" alt="" width="200">
-                <h2>Hotel Paraíso das Águas</h2>
+        <div class="footer-container">
+            <div class="footer-item">
+                <div class="footer-logo">
+                    <img src="src/imagens/logo_favicon_no_bg_circled.png" alt="" width="200">
+                    <h2>Hotel Paraíso das Águas</h2>
+                </div>
             </div>
-
-        </div>
-        <div class="footer-item">
-            <div class="footer-contact">
-                <h3>Contato</h3>
-                <ul>
-                    <li><i class="fa-solid fa-phone"></i> (41) 3450-0601</li> <!-- Added icon -->
-                    <li><i class="fa-solid fa-envelope"></i> contato@hotelpda.com.br</li> <!-- Added icon -->
-                    <li><i class="fa-solid fa-envelope"></i> suporte@hotelpda.com.br</li> <!-- Added icon -->
-                    <li><i class="fa-solid fa-location-dot"></i> Rua São Celestino Nº 95</li> <!-- Added icon -->
-                    <li><i class="fa-brands fa-whatsapp"></i> WhatsApp: (41) 91234-5678</li> <!-- Added WhatsApp -->
+            <div class="footer-item">
+                <div class="footer-contact">
+                    <h3>Contato</h3>
+                    <ul>
+                        <li><i class="fa-solid fa-phone"></i> (41) 3450-0601</li> <!-- Added icon -->
+                        <li><i class="fa-solid fa-envelope"></i> contato@hotelpda.com.br</li> <!-- Added icon -->
+                        <li><i class="fa-solid fa-envelope"></i> suporte@hotelpda.com.br</li> <!-- Added icon -->
+                        <li><i class="fa-solid fa-location-dot"></i> Rua São Celestino Nº 95</li> <!-- Added icon -->
+                        <li><i class="fa-brands fa-whatsapp"></i> WhatsApp: (41) 91234-5678</li> <!-- Added WhatsApp -->
+                    </ul>
+                    <p class="operating-hours"><i class="fa-solid fa-clock"></i> Horário de funcionamento: Segunda-Sábado, 8:30 - 20:00</p>
+                </div>
+            </div>
+            <div class="footer-item">
+                <h3>Follow us</h3>
+                <ul class="social-media">
+                    <li><a title="instagram" href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a title="facebook" href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                    <li><a title="x" href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
+                    <li><a title="linkedin" href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                    <li><a title="threads" href="#"><i class="fa-brands fa-threads"></i></a></li>
                 </ul>
-                <p class="operating-hours"><i class="fa-solid fa-clock"></i> Horário de funcionamento: Segunda-Sábado, 8:30 - 20:00</p>
             </div>
-        </div>
-        <div class="footer-item">
-            <h3>Follow us</h3>
-            <ul class="social-media">
-                <li><a title="instagram" href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                <li><a title="facebook" href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
-                <li><a title="x" href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
-                <li><a title="linkedin" href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                <li><a title="threads" href="#"><i class="fa-brands fa-threads"></i></a></li>
-            </ul>
-        </div>
+        </div>      
         <small>&copy; Todos os direitos reservados</small>
     </footer>
     
