--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="about-item">
                 <div class="about-text">
                     <h1>Sobre o Hotel</h1>
-                    <p>Descubra o Paraíso das Águas, um refúgio perfeito para relaxar e renovar suas energias. Desfrute de acomodações confortáveis, vistas deslumbrantes e um atendimento impecável. Seja para uma escapada romântica ou férias em família, aqui você encontrará a tranquilidade e o conforto que merece. Reserve já! lor</p>      
+                    <p>Descubra o Paraíso das Águas, um refúgio perfeito para relaxar e renovar suas energias. Desfrute de acomodações confortáveis, vistas deslumbrantes e um atendimento impecável. Seja para uma escapada romântica ou férias em família, aqui você encontrará a tranquilidade e o conforto que merece. Reserve já!</p>      
                 </div>
                 <div class="about-img">
                     <img src="src/imagens/hotel.jpg" alt="">
